<resources>
    <string name="app_name">HAGL</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="welcome_to_app_name">Welcome to Drug store</string>
    <string name="Login">Log In</string>
    <string name="SignUp">New to DrugStore? Sign Up!</string>
    <string name="client_id">728070969789-078v2p4nu3h47tt02140u4lilj1b59p6.apps.googleusercontent.com</string>
    <string name="Quote">your pleasure is my mission</string>
    <string name="continue_with_phone">Continue With Mobile Number</string>
    <string name="continue_with_Google">Continue With Google</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="enter_phone">Next</string>
    <string name="get_started">Get Started</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_the_6_digit_code_sent_to">Enter the 6-digit code sent to:</string>
    <string name="confirm_phone">Confirm</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_order">Orders</string>
    <string name="bottom_nav_notification">Notification</string>

    <string name="bottom_nav_profile">Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="help_support">Help &amp; Support</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_trending">Top trending</string>
    <string name="Supplement">Supplement</string>
    <string name="Category">Category</string>
    <string name="News">News</string>
    <string name="notification">Notification</string>
    <string name="confirm_delivery_location">Confirm Delivery Location</string>
    <string name="orderhistory">Order History</string>
    <string name="google_map_api_key">AIzaSyAhX49C_y6sYfnKeyNdo9BNq-loky0OahE</string>
    <string name="news_api">54db42e432d84365af90fcde5c12c8ff</string>

    <string name="order">Order</string>
    <string name="ordersummary">Order Summary</string>
    <string name="drug_preview">Drug preview</string>
    <string name="reminder">Reminder</string>
    <string name="remind_to_take_medicine">Remind to take medicine</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="date_picker_button">Date Picker Button</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="medicine">Medicine</string>
    <string name="add_button">Add Button</string>
    <string name="bottom_nav_chat">Message</string>
    <string name="Time">Time</string>
    <string name="save_prescription">Save Prescription</string>
    <string name="pills">pills</string>


    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="channel_description">channel_description</string>
    <string name="channel_name">channel_name</string>
    <string name="ordersearch">Order Search</string>
    <string name="my_address">My Address</string>

    <!-- Permission -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!--  Camera -->
    <string name="map_not_ready">Map is not ready</string>
    <string name="animate">Animate</string>
    <string name="camera_demo_description">Demonstrates Camera Functions</string>
    <string name="camera_demo_label">Camera</string>
    <string name="down_arrow">\u2193</string>
    <string name="duration">Custom Duration</string>
    <string name="go_to_bondi">Go to Bondi</string>
    <string name="go_to_sydney">Go to Sydney</string>
    <string name="left_arrow">\u2190</string>
    <string name="right_arrow">\u2192</string>
    <string name="stop_animation">\u25A0</string>
    <string name="tilt_less">\u2193</string>
    <string name="tilt_more">\u2191</string>
    <string name="up_arrow">\u2191</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
</resources>