<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navBtnHomeAdmin"
        android:icon="@drawable/ic_home_24"
        android:title="@string/bottom_nav_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/navBtnOrderAdmin"
        android:icon="@drawable/ic_order_list_24"
        android:title="@string/bottom_nav_order"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navBtnChatAdmin"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/bottom_nav_chat"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/navBtnProfileAdmin"
        android:icon="@drawable/ic_user_profile_24"
        android:title="@string/bottom_nav_profile"
        app:showAsAction="ifRoom"/>
</menu>