<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navBtnHome"
        android:icon="@drawable/ic_home_24"
        android:title="@string/bottom_nav_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/navBtnOrder"
        android:icon="@drawable/ic_order_list_24"
        android:title="@string/bottom_nav_order"
        app:showAsAction="ifRoom"/>

    <item
        android:title=""
        app:showAsAction="ifRoom"
        android:enabled="false"/>

    <item
        android:id="@+id/navBtnNotify"
        android:icon="@drawable/ic_notifications_24"
        android:title="@string/bottom_nav_notification"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/navBtnProfile"
        android:icon="@drawable/ic_user_profile_24"
        android:title="@string/bottom_nav_profile"
        app:showAsAction="ifRoom"/>

</menu>