<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.signIn.SignInActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="@dimen/splash_screen_title_text_size"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:fontFamily="@font/carbon"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tvQuote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quote"
        android:gravity="center"
        android:textSize="@dimen/splash_screen_description_text_size"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/solid_blue_button"
        android:text="@string/continue_with_Google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_google_icon"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@id/btnFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/solid_blue_button"
        android:drawableStart="@drawable/ic_facebook_icon"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/continue_with_facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/llDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnMobile"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/divider_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/divider_color"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="50dp"
        android:text="@string/continue_with_phone"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:background="@drawable/white_solid_blue_border_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>