<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.MainActivity">

    <ImageView
        android:id="@+id/ivSplashName"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/main_screen"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"/>


    <TextView
        android:id="@+id/tvSplashName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_app_name"
        android:gravity="center"
        android:textSize="@dimen/main_screen_title_text_size"
        android:textColor="@color/primary_text_color"
        android:textStyle="bold"
        android:fontFamily="@font/carbon"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSplashName"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Login"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSignUp"
        android:background="@drawable/solid_blue_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/SignUp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:background="@drawable/white_solid_blue_border_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>