<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.user.NewPrescriptionFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remind_to_take_medicine"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="12dp"
            android:layout_marginStart="20dp"
            android:text="@string/start_date"
            android:textAppearance="@style/title_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnStartDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/textViewContentStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="12dp"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/content_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imageViewStartDatePicker"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewStartDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/date_picker_button"
                android:src="@drawable/ic_date_picker"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_color"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutStartDate">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="12dp"
            android:layout_marginStart="20dp"
            android:text="@string/end_date"
            android:textAppearance="@style/title_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnEndDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/textViewContentEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="12dp"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/content_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imageViewEndDatePicker"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewEndDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/date_picker_button"
                android:src="@drawable/ic_date_picker"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_color"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layoutEndDate">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="12dp"
            android:layout_marginStart="20dp"
            android:text="@string/Time"
            android:textAppearance="@style/title_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/textViewContentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="12dp"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/content_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imageViewTimePicker"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/date_picker_button"
                android:src="@drawable/ic_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_color"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewMedicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginVertical="12dp"
        android:layout_marginStart="20dp"
        android:text="@string/medicine"
        android:textAppearance="@style/title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutTime" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMedicines"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMedicine" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="24dp"
        android:contentDescription="@string/add_button"
        android:src="@drawable/ic_add_circle"
        app:layout_constraintEnd_toEndOf="@id/recyclerViewMedicines"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewMedicines"
        app:tint="@color/turquoise" />
</androidx.constraintlayout.widget.ConstraintLayout>