<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageViewDrug"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_margin="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/drug_preview"
        android:scaleType="centerCrop"
        android:src="@drawable/drug"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="@id/imageViewDrug"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageViewDrug"
        app:layout_constraintTop_toTopOf="@id/imageViewDrug">

        <TextView
            android:id="@+id/textViewDrugName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Тантум Верде спрей для местного применения, 30мл"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDrugName">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutDrugQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_outline"
                android:paddingHorizontal="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/btnDecrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/date_picker_button"
                    android:src="@drawable/ic_minus_circle_outline"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/red" />

                <TextView
                    android:id="@+id/textViewDrugQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="1"
                    android:textAppearance="@style/quantity_use_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnIncrease"
                    app:layout_constraintStart_toEndOf="@id/btnDecrease"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btnIncrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/date_picker_button"
                    android:src="@drawable/ic_add_circle_outline"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/red" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textViewUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/pills"
                android:textAppearance="@style/quantity_label_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layoutDrugQuantity"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_color"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>